HelloUltraviolet/Fixtures/RejectedSource/FFI/BoundaryUnwindingNoAdditionalDiagnostics/Expected.uv
//! Expected diagnostic metadata for the BoundaryUnwindingNoAdditionalDiagnostics rejected-source specimen.

expectedDiagnostic("E-SYS-3355", "diagnostics.23.BoundaryUnwindingNoAdditionalDiagnostics")
